@@ -63,14 +63,8 @@ def break_lines(request):
 
     return HttpResponseRedirect('/')
 
-def robots_txt(request):
-    return render_to_response('robots.txt', mimetype='text/plain')
-
 def redirect_feed(request):
     return HttpResponseRedirect(urlresolvers.reverse('feed', args=('latest',)))
-
-def favicon_view(request):
-    return HttpResponseRedirect('/static/img/favicon.ico')
 
 def get_page(request):
     page = request.GET.get('page', '')
